// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SideNav /> can be \`fixed\` 1`] = `
<SideNav
  fixed={true}
  trigger={
    <button
      className="trigger"
    >
      Show sidenav
    </button>
  }
>
  <button
    className="trigger hide-on-large-only sidenav-trigger"
    data-target="sidenav_mockId"
  >
    Show sidenav
  </button>
  <ul
    className="sidenav sidenav-fixed"
    id="sidenav_mockId"
  />
</SideNav>
`;

exports[`<SideNav /> is \`fixed\` if no trigger is passed 1`] = `
<SideNav>
  <ul
    className="sidenav sidenav-fixed"
    id="sidenav_mockId"
  />
</SideNav>
`;

exports[`<SideNav /> renders 1`] = `
<SideNav
  trigger={
    <button
      className="trigger"
    >
      Show sidenav
    </button>
  }
>
  <button
    className="trigger show-on-large sidenav-trigger"
    data-target="sidenav_mockId"
  >
    Show sidenav
  </button>
  <ul
    className="sidenav"
    id="sidenav_mockId"
  />
</SideNav>
`;

exports[`<SideNav /> renders 2`] = `
<SideNav
  id="test"
  trigger={
    <button
      className="trigger"
    >
      Show sidenav
    </button>
  }
>
  <button
    className="trigger show-on-large sidenav-trigger"
    data-target="test"
  >
    Show sidenav
  </button>
  <ul
    className="sidenav"
    id="test"
  />
</SideNav>
`;

exports[`<SideNav /> renders children 1`] = `
<SideNav
  trigger={
    <button
      className="trigger"
    >
      Show sidenav
    </button>
  }
>
  <button
    className="trigger show-on-large sidenav-trigger"
    data-target="sidenav_mockId"
  >
    Show sidenav
  </button>
  <ul
    className="sidenav"
    id="sidenav_mockId"
  >
    <span
      className="test-child"
    />
  </ul>
</SideNav>
`;
